[package]
name = "hashi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gloo = "0.11.0"
rand = { version = "0.9.2", features = ["small_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"
yew = { version = "0.22.0", features = ["csr"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
