[package]
name = "hashi"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
gloo = "0.11.0"
rand = { version = "0.9.2", features = ["small_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"
yew = { version = "0.22.0", features = ["csr"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
yew-router = "0.19.0"
thiserror = "2.0.17"
gloo-timers = "0.3.0"
yew-hooks = "0.4.0"
